remove bootstrap dependency
update demo
remove bootstrap dependency

--- a/demo/index.html
+++ b/demo/index.html
@@ -4,14 +4,14 @@
 		<title>tc-grid Rules!</title>
 
 		<link data-require="fontawesome@*" data-semver="4.1.0" rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" />
-		<link data-require="fontawesome@*" data-semver="4.1.0" rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
+		
 		<link href="../dist/tc-grid.css" rel="stylesheet"/>
 		<link href="style.css"/>
 	</head>
 	<body ng-app="MyApp">
 		<div ng-controller="MyController">
-			<div class="col-md-offset-2 col-md-8">
-				<tc-grid tc-grid-data="vm.data">
+			<div style="margin-left: 50px; width: 800px;">
+				<tc-grid tc-grid-data="vm.data" tc-grid-options="vm.gridOptions">
 					<tc-grid-column tc-col-name="Id">{{row.Id}}</tc-grid-column>
 					<tc-grid-column tc-col-name="Name">{{row.Name}}</tc-grid-column>
 					<tc-grid-column tc-col-name="Email">{{row.Email}}</tc-grid-column>
