--- a/demo/index.html
+++ b/demo/index.html
@@ -2,9 +2,6 @@
 <html>
 	<head>
 		<title>tc-grid Rules!</title>
-
-		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" />
-		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
 		<link href="../dist/tc-grid.css" rel="stylesheet"/>
 		<link href="style.css"/>
 	</head>
@@ -26,6 +23,6 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
 		
 		<script src="../dist/tc-grid.js"></script>
-		<script src="../dist/tc-grid-templates.js"></script>
 		<script src="controller.js"></script>
 	</body>
+</html>
