--- a/demo/index.html
+++ b/demo/index.html
@@ -1,27 +1,25 @@
 <!doctype HTML>
 <html>
 	<head>
+        <meta name="viewport" content="width=device-width">
+
 		<title>tc-grid Rules!</title>
 		<link href="../dist/tc-grid.css" rel="stylesheet"/>
-		<link href="style.css"/>
+		<link href="style.css" rel="stylesheet"/>
 	</head>
 	<body ng-app="MyApp">
 		<div ng-controller="MyController">
-			<div class="col-md-offset-2 col-md-8">
-				<tc-grid tc-data="vm.data" tc-options="vm.gridOptions">
-					<tc-column tc-field="Id"></tc-column>
-					<tc-column tc-field="Name"></tc-column>
-					<tc-column tc-field="Email"></tc-column>
-					<tc-column tc-field="Status"></tc-column> 				
-					<tc-column><span ng-click="test()">tests</span></tc-column>	
-				</tc-grid>							
-			</div>
+            <tc-grid tc-data="vm.data" tc-options="vm.gridOptions">
+                <tc-column tc-field="Id"></tc-column>
+                <tc-column tc-field="Name"></tc-column>
+                <tc-column tc-name="My Email" tc-field="Email"></tc-column>
+                <tc-column tc-name="Status">{{row.Status}}</tc-column>
+                <tc-column><button ng-click="test()">Click me</button></tc-column>
+            </tc-grid>
 		</div>
-
-
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
-		
+
 		<script src="../dist/tc-grid.js"></script>
 		<script src="controller.js"></script>
 	</body>
