--- a/demo/index.html
+++ b/demo/index.html
@@ -9,12 +9,18 @@
 	</head>
 	<body ng-app="MyApp">
 		<div ng-controller="MyController">
+			<input type="checkbox" ng-model="vm.show.Id"/> Id <br/>
+			<input type="checkbox" ng-model="vm.show.Name"/> Name<br/>
+			<input type="checkbox" ng-model="vm.show.Email"/> My Email<br/>
+			<input type="checkbox" ng-model="vm.show.Status"/> Status<br/>
+			<input type="checkbox" ng-model="vm.show.Controls"/> Controls<br/>
+
             <tc-grid tc-data="vm.data" tc-options="vm.gridOptions">
-                <tc-column tc-field="Id"></tc-column>
-                <tc-column tc-field="Name"></tc-column>
-                <tc-column tc-name="My Email" tc-field="Email"></tc-column>
-                <tc-column tc-name="Status">{{row.Status}}</tc-column>
-                <tc-column><button ng-click="test()">Click me</button></tc-column>
+                <tc-column tc-field="Id" tc-visible="vm.show.Id"></tc-column>
+                <tc-column tc-field="Name" tc-visible="vm.show.Name"></tc-column>
+                <tc-column tc-name="My Email" tc-field="Email" tc-visible="vm.show.Email"></tc-column>
+                <tc-column tc-name="Status" tc-visible="vm.show.Status">{{row.Status}}</tc-column>
+                <tc-column tc-visible="vm.show.Controls"><button ng-click="test()">Click me</button></tc-column>
             </tc-grid>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.js"></script>
