--- a/demo/index.html
+++ b/demo/index.html
@@ -19,7 +19,7 @@
                 <tc-column tc-field="Name" tc-visible="vm.show.Name"></tc-column>
                 <tc-column tc-name="My Email" tc-field="Email" tc-visible="vm.show.Email"></tc-column>
                 <tc-column tc-name="Status">{{row.Status}}</tc-column>
-                <tc-column tc-visible="vm.show.Controls"><button ng-click="test()">Click me</button></tc-column>
+                <tc-column tc-visible="vm.show.Controls"><button ng-click="vm.test()">Click me</button></tc-column>
             </tc-grid>
 
 			<button ng-click="vm.gridOptions.reset()">Reset Grid</button>
