--- a/demo/index.html
+++ b/demo/index.html
@@ -17,7 +17,7 @@
             <tc-grid tc-data="vm.data" tc-options="vm.gridOptions">
                 <tc-column tc-field="Id" tc-visible="vm.show.Id"></tc-column>
                 <tc-column tc-field="Name" tc-visible="vm.show.Name"></tc-column>
-                <tc-column tc-name="My Email" tc-field="Email" tc-visible="vm.show.Email"></tc-column>
+                <tc-column tc-name="<span style='color: red'>My Email</span>" tc-field="Email" tc-visible="vm.show.Email"></tc-column>
                 <tc-column tc-name="Status">{{row.Status}}</tc-column>
                 <tc-column tc-visible="vm.show.Controls"><button ng-click="vm.test()">Click me</button></tc-column>
             </tc-grid>
