--- a/demo/index.html
+++ b/demo/index.html
@@ -24,6 +24,8 @@
 
 			<button ng-click="vm.gridOptions.reset()">Reset Grid</button>
 			<button ng-click="vm.shuffleColumns()">Shuffle</button>
+			<button ng-click="vm.prev()">Prev</button>
+			<button ng-click="vm.next()">Next</button>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
