--- a/demo/index.html
+++ b/demo/index.html
@@ -6,28 +6,26 @@
 		<title>tc-grid Rules!</title>
 		<link href="../dist/tc-grid.css" rel="stylesheet"/>
 		<link href="style.css" rel="stylesheet"/>
+		<link href="grid.css" rel="stylesheet"/>
 	</head>
 	<body ng-app="MyApp">
 		<div ng-controller="MyController">
-			<input type="checkbox" ng-model="vm.show.Id"/> Id <br/>
-			<input type="checkbox" ng-model="vm.show.Name"/> Name<br/>
-			<input type="checkbox" ng-model="vm.show.Email"/> My Email<br/>
-			<input type="checkbox" ng-model="vm.show.Controls"/> Controls<br/>
-
-            <tc-grid tc-data="vm.data" tc-options="vm.gridOptions" tc-row-link="http://google.com">
-                <tc-column tc-field="Id" tc-visible="vm.show.Id"></tc-column>
-                <tc-column tc-field="Name" tc-visible="vm.show.Name"></tc-column>
-                <tc-column tc-name="<span style='color: red'>My Email</span>" tc-field="Email" tc-visible="vm.show.Email"></tc-column>
-                <tc-column tc-name="Status">{{row.Status}}</tc-column>
-                <tc-column tc-visible="vm.show.Controls"><button ng-click="vm.test()">Click me</button></tc-column>
-            </tc-grid>
-
-			<button ng-click="vm.gridOptions.reset()">Reset Grid</button>
-			<button ng-click="vm.shuffleColumns()">Shuffle</button>
-			<button ng-click="vm.prev()">Prev</button>
-			<button ng-click="vm.next()">Next</button>
+			<div class="hero">
+				<div class="hero__title">TC-Grid</div>
+			</div>
+			<div class="container">
+				<div class="container__grid">
+					<tc-grid tc-data="vm.data" tc-grid-class="grid" tc-options="vm.gridOptions" tc-row-link="http://google.com">
+						<tc-column tc-field="Id" tc-visible="vm.show.Id"></tc-column>
+						<tc-column tc-field="Name" tc-visible="vm.show.Name"></tc-column>
+						<tc-column tc-field="Email" tc-visible="vm.show.Email"></tc-column>
+						<tc-column tc-name="Status">{{row.Status}}</tc-column>
+						<tc-column tc-visible="vm.show.Controls"><button class="test-button" ng-click="vm.test();$event.preventDefault();">Click me</button></tc-column>
+					</tc-grid>
+				</div>
+			</div>
 		</div>
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.js"></script>
+		<script src="../bower_components/angular/angular.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
 
 		<script src="../dist/tc-grid.js"></script>
