--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
 	<head>
         <meta name="viewport" content="width=device-width">
 
-		<title>tc-grid Rules!</title>
+		<title>TC-Grid Demo</title>
 		<link href="../dist/tc-grid.css" rel="stylesheet"/>
 		<link href="style.css" rel="stylesheet"/>
 		<link href="grid.css" rel="stylesheet"/>
