--- a/demo/index.html
+++ b/demo/index.html
@@ -4,6 +4,8 @@
         <meta name="viewport" content="width=device-width">
 
 		<title>TC-Grid Demo</title>
+		<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='preload' use="font">
+		<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
 		<link href="../dist/tc-grid.css" rel="stylesheet"/>
 		<link href="style.css" rel="stylesheet"/>
 		<link href="grid.css" rel="stylesheet"/>
@@ -12,6 +14,9 @@
 		<div ng-controller="MyController">
 			<div class="hero">
 				<div class="hero__title">TC-Grid</div>
+				<div>
+					<button class="hero__button button">Download</button>
+				</div>
 			</div>
 			<div class="container">
 				<div class="container__grid">
@@ -20,7 +25,7 @@
 						<tc-column tc-field="Name" tc-visible="vm.show.Name"></tc-column>
 						<tc-column tc-field="Email" tc-visible="vm.show.Email"></tc-column>
 						<tc-column tc-name="Status">{{row.Status}}</tc-column>
-						<tc-column tc-visible="vm.show.Controls"><button class="test-button" ng-click="vm.test();$event.preventDefault();">Click me</button></tc-column>
+						<tc-column tc-visible="vm.show.Controls"><button class="button" ng-click="vm.test();$event.preventDefault();">Click me</button></tc-column>
 					</tc-grid>
 				</div>
 			</div>
