--- a/demo/index.html
+++ b/demo/index.html
@@ -15,7 +15,7 @@
 			<div class="hero">
 				<div class="hero__title">TC-Grid</div>
 				<div>
-					<button class="hero__button button">Download</button>
+					<a class="hero__button button" href="https://github.com/ThirdCornerLLC/tc-grid">Download</a>
 				</div>
 			</div>
 			<div class="container">
@@ -31,8 +31,6 @@
 			</div>
 		</div>
 		<script src="../bower_components/angular/angular.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
-
 		<script src="../dist/tc-grid.js"></script>
 		<script src="controller.js"></script>
 	</body>
