--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 		<title>TC-Grid Demo</title>
 		<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='preload' use="font">
 		<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
-		<link href="../dist/tc-grid.css" rel="stylesheet"/>
-		<link href="style.css" rel="stylesheet"/>
-		<link href="grid.css" rel="stylesheet"/>
+		<link href="dist/tc-grid.css" rel="stylesheet"/>
+		<link href="public/style.css" rel="stylesheet"/>
+		<link href="public/grid.css" rel="stylesheet"/>
 	</head>
 	<body ng-app="MyApp">
 		<div ng-controller="MyController">
@@ -30,8 +30,8 @@
 				</div>
 			</div>
 		</div>
-		<script src="../bower_components/angular/angular.min.js"></script>
-		<script src="../dist/tc-grid.js"></script>
-		<script src="controller.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular.min.js"></script>
+		<script src="dist/tc-grid.js"></script>
+		<script src="public/controller.js"></script>
 	</body>
 </html>
