--- a/demo/index.html
+++ b/demo/index.html
@@ -30,7 +30,7 @@
 				</div>
 			</div>
 		</div>
-		<script src="../bower_components/angular/angular.min.js"></script>
+		<script src="../bower_components/angular/angular.js"></script>
 		<script src="../dist/tc-grid.js"></script>
 		<script src="controller.js"></script>
 	</body>
