--- a/demo/index.html
+++ b/demo/index.html
@@ -1,37 +1,79 @@
 <!doctype HTML>
 <html>
-	<head>
-        <meta name="viewport" content="width=device-width">
+<head>
+	<meta name="viewport" content="width=device-width">
 
-		<title>TC-Grid Demo</title>
-		<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='preload' use="font">
-		<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
-		<link href="../dist/tc-grid.css" rel="stylesheet"/>
-		<link href="style.css" rel="stylesheet"/>
-		<link href="grid.css" rel="stylesheet"/>
-	</head>
-	<body ng-app="MyApp">
-		<div ng-controller="MyController">
-			<div class="hero">
-				<div class="hero__title">TC-Grid</div>
-				<div>
-					<a class="hero__button button" href="https://github.com/ThirdCornerLLC/tc-grid">Download</a>
-				</div>
-			</div>
-			<div class="container">
-				<div class="container__grid">
-					<tc-grid tc-data="vm.data" tc-grid-class="grid" tc-options="vm.gridOptions" tc-row-link="http://google.com">
-						<tc-column tc-field="Id" tc-visible="vm.show.Id">{{row.Id}}</tc-column>
-						<tc-column tc-field="Name" tc-visible="vm.show.Name">{{row.Name}}</tc-column>
-						<tc-column tc-field="Email" tc-visible="vm.show.Email">{{row.Email}}</tc-column>
-						<tc-column tc-name="Status">{{row.Status}}</tc-column>
-						<tc-column tc-visible="vm.show.Controls"><button class="button" ng-click="vm.test();$event.preventDefault();">Click me</button></tc-column>
-					</tc-grid>
-				</div>
-			</div>
+	<title>TC-Grid Demo</title>
+	<!--<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='preload' use="font">-->
+	<!--<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>-->
+	<link href="../dist/tc-grid.css" rel="stylesheet"/>
+	<link href="style.css" rel="stylesheet"/>
+	<link href="grid.css" rel="stylesheet"/>
+</head>
+<body ng-app="MyApp">
+<div ng-controller="MyController">
+	<div class="hero">
+		<div class="hero__title">TC-Grid</div>
+		<div>
+			<a class="hero__button button" href="https://github.com/ThirdCornerLLC/tc-grid">Download</a>
 		</div>
-		<script src="../bower_components/angular/angular.js"></script>
-		<script src="../dist/tc-grid.js"></script>
-		<script src="controller.js"></script>
-	</body>
+	</div>
+	<div class="container">
+		<div class="container__grid">
+			<tc-grid tc-data="vm.data" tc-grid-class="grid" tc-options="vm.gridOptions" tc-row-link="http://google.com">
+				<tc-column tc-field="Id" tc-visible="vm.show.Id">{{row.Id}}</tc-column>
+				<tc-column tc-field="Name" tc-visible="vm.show.Name">{{row.Name}}</tc-column>
+				<tc-column tc-field="Email" tc-visible="vm.show.Email">{{row.Email}}</tc-column>
+				<tc-column tc-name="Status">{{row.Status}}</tc-column>
+				<tc-column tc-visible="vm.show.Controls"><button class="button" ng-click="vm.test();$event.preventDefault();">Click me</button></tc-column>
+			</tc-grid>
+		</div>
+
+		<section class="section section--tc-name">
+			<div class="section__grid">
+				<tc-grid tc-data="vm.data" tc-grid-class="grid">
+					<tc-column tc-name="Name">{{row.Name}}</tc-column>
+				</tc-grid>
+			</div>
+			<div class="section__description">
+				<h1 class="section__title">tc-name</h1>
+				<p>tc-name adds a name field to a column. It will also parse any html markup in the header
+					allowing input fields and angular expressions.</p>
+			</div>
+		</section>
+
+		<section class="section section--tc-field">
+			<div class="section__grid">
+				<tc-grid tc-data="vm.data" tc-grid-class="grid">
+					<tc-column tc-field="Name">{{row.Name}}</tc-column>
+				</tc-grid>
+			</div>
+			<div class="section__description">
+				<h1 class="section__title">tc-field</h1>
+				<p>tc-field is similar to tc-name, but will trigger sorting on the field given.
+				for example, if tc-field="Name" when clicking the header, onSortChange will be called with
+				["Name asc"] or ["Name desc"]
+				<br/>
+				<small>*Requires sort function</small></p>
+			</div>
+		</section>
+
+		<section class="section section--tc-data">
+			<div class="section__grid">
+				<tc-grid tc-data="vm.data" tc-grid-class="grid">
+					<tc-column tc-name="Name">{{row.Name}}</tc-column>
+				</tc-grid>
+			</div>
+			<div class="section__description">
+				<h1 class="section__title">tc-data</h1>
+				<p>tc-data is the array of data to pass into the grid. Any time this data is
+				modified the grid is updated.</p>
+			</div>
+		</section>
+	</div>
+</div>
+<script src="../bower_components/angular/angular.js"></script>
+<script src="../dist/tc-grid.js"></script>
+<script src="controller.js"></script>
+</body>
 </html>
